--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,89 @@ a {
 * {
   box-sizing: border-box;
 }
+
+#cube .front {
+  transform: 
+    translateZ(100px)
+    translateY(-50px);
+}
+
+#cube .back {
+  transform: 
+    rotateX(-180deg)
+    translateZ(100px)
+    translateY(-50px);
+}
+
+#cube .right {
+  transform:
+    rotateY(90deg)
+    translateZ(100px)
+    translateY(-50px);
+}
+
+#cube .left {
+  transform:
+    rotateY(-90deg)
+    translateZ(100px)
+    translateY(-50px);
+}
+
+#cube .top {
+  transform:
+    rotateX(90deg)
+    translateZ(100px)
+    translateY(-50px);
+}
+
+#cube .bottom {
+  transform:
+    rotateX(-90deg)
+    translateZ(100px)
+    translateY(-50px);
+}
+
+.container {
+  width: 200px;
+  height: 200px;
+  position: relative;
+  margin: 0 auto 40px;
+  perspective: 1000px;
+  perspective-origin: 50% 100%;
+}
+
+#cube {
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+  transition: transform 6s;
+}
+
+#cube:hover {
+  cursor: pointer;
+}
+
+#cube div {
+  display: block;
+  position: absolute;
+  width: 200px;
+  height: 100px;  
+  margin: 0 auto;  
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 500%;
+  text-align: center;
+  padding: 50px 0;
+}
+
+.dot {
+  display: block;
+  width: 200px;
+  position: absolute;
+  border-radius: 2%;
+  height:200px;
+  top: 0;
+  left:0;
+  background: #fff;
+  background-size: 198px 198px;
+  background-image: url("https://thumbs.dreamstime.com/b/hand-drawn-question-mark-doodle-sketch-style-icon-decoration-e-element-isolated-white-background-flat-design-vector-124000045.jpg");
+}
