--- a/styles/globals.css
+++ b/styles/globals.css
@@ -100,3 +100,10 @@ a {
   background-size: 198px 198px;
   background-image: url("https://thumbs.dreamstime.com/b/hand-drawn-question-mark-doodle-sketch-style-icon-decoration-e-element-isolated-white-background-flat-design-vector-124000045.jpg");
 }
+
+
+
+.overflow{
+  margin: 0 30px;
+  z-index: 10 !important;
+}
